[tool.poetry]
name = "blog-writer"
version = "0.1.0"
description = "Automatically write blog contents using agents"
authors = ["Sungchul Kim <sungchul7039@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.12"
langchain-core = "^0.3.25"
langchain-openai = "^0.2.12"
langchain-text-splitters = "^0.3.3"
langchain-chroma = "^0.1.4"
langgraph = "^0.2.60"
streamlit = "^1.32.0"
python-dotenv = "^1.0.1"
chromadb = "^0.4.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
