[tool.poetry]
name = "blog-writer"
version = "0.1.0"
description = "Automatically write blog contents using agents"
authors = ["Sungchul Kim <sungchul7039@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "0.3.12"
langchain-core = "0.3.25"
langchain-openai = "0.2.12"
langchain-text-splitters = "0.3.3"
langchain-chroma = "0.1.4"
langgraph = "0.2.60"
streamlit = "1.32.0"
python-dotenv = "1.0.1"
chromadb = "0.4.24"
opencv-python = "4.9.0.80"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.0"
black = "24.2.0"
isort = "5.13.2"
flake8 = "7.0.0"
flake8-docstrings = "1.7.0"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
